<resources>
    <string name="app_name">New Day</string>

    <!-- GENERAL -->
    <string name="action_login">Login</string>
    <string name="action_logoff">Logoff</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">New Day</string>
    <string name="string_add_success">New entry added successfully!</string>
    <string name="string_register_success">Registration successful!</string>

    <!-- DIALOG -->
    <string name="dialog_entry_title">Entry Type</string>
    <string name="button_create_block">Block</string>
    <string name="button_create_event">Event</string>
    <string name="button_create_notification">Notification</string>

    <!-- LOGIN VIEW -->
    <string name="title_activity_login">Login</string>
    <string name="string_login_error">Login failed!</string>
    <string name="edit_login_username">Email</string>
    <string name="edit_login_password">Password</string>
    <string name="button_login_submit">Login</string>
    <string name="button_login_new">Don\'t have an account? Make one!</string>

    <!-- ADD VIEW -->
    <string name="action_save">Save</string>
    <string name="title_activity_add">Add Entry</string>
    <string name="edit_add_name">Title</string>
    <string name="label_time_start">Start</string>
    <string name="label_time_end">End</string>
    <string name="label_add_alert">Alert</string>
    <string name="label_add_category">Color</string>
    <string name="button_submit">Save</string>
    <string name="error_add_time">Start time cannot come after end time!</string>
    <string name="error_add_title">Entries must have a title!</string>
    <string name="error_add_days">Blocks must take place on at least one day!</string>

    <!-- REGISTER VIEW -->
    <string name="title_activity_register">Register Account</string>
    <string name="edit_register_name">Full Name</string>
    <string name="edit_register_username">Username</string>
    <string name="edit_register_email1">Email</string>
    <string name="edit_register_email2">Verify Email</string>
    <string name="edit_register_pwd1">Password</string>
    <string name="edit_register_pwd2">Verify Password</string>
    <string name="button_register_submit">Sign Up</string>

    <!-- LOGIN ERROR STRINGS -->
    <string name="error_invalid_email">This email address is invalid!</string>
    <string name="error_invalid_password">This password is too short!</string>
    <string name="error_incorrect_password">This password is incorrect!</string>
    <string name="error_field_required">Please fill in all fields!</string>
    <string name="error_authenticating">Could not authenticate user!</string>
    <string name="error_email_no_match">Emails do not match!</string>
    <string name="error_pwd_no_match">Passwords do not match!</string>
    <string name="error_register_failure">Could not register account! Please ensure that your information is correct and try again.</string>

    <!-- UPCOMING -->
    <string name="label_upcoming_empty">Nothing here yet! Use the button below to block out your schedule!</string>
    <string name="label_upcoming_login">Please login or register!</string>
    <string name="label_block_type">Block</string>
    <string name="label_event_type">Event</string>
    <string name="label_notification_type">Notification</string>

    <!-- DETAIL -->
    <string name="label_detail_type">Type</string>
    <string name="label_detail_alert">Alert</string>
    <string name="label_detail_time">Starts at %s</string>
    <string name="button_detail_edit">Edit Entry</string>

    <!-- FORUM -->
    <string name="button_forum_add">Add Quote</string>
    <string name="button_forum_login">Please Login first!</string>
    <string name="error_no_quote">You need to enter a quote!</string>
    <string name="error_no_author">You need to enter an author!</string>
    <string name="success_quote">Quote added successfully!</string>

    <!-- PLACEHOLDER -->
    <string name="label_placeholder">PLACEHOLDER</string>
    <string name="label_bullet">\u2022</string>

    <!-- DAYS OF THE WEEK -->
    <string name="toggle_sun">Sun</string>
    <string name="toggle_mon">Mon</string>
    <string name="toggle_tues">Tues</string>
    <string name="toggle_wed">Wed</string>
    <string name="toggle_thurs">Thu</string>
    <string name="toggle_fri">Fri</string>
    <string name="toggle_sat">Sat</string>

    <!-- QUOTES -->
    <string name="quote_default">\"With the new day comes new strength and new thoughts.\"</string>
    <string name="author_default">Eleanor Roosevelt</string>
</resources>
