<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="itp341.cammarano.colin.finalproject.MainActivity">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_username"
        android:orderInCategory="100"
        android:title="PLACEHOLDER"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_logoff"
        android:orderInCategory="100"
        android:title="@string/action_logoff"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never"/>
</menu>
