<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialog_entry_title"
            android:id="@+id/dialog_entry_label"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorLightText"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_block"
        android:id="@+id/dialog_entry_button_create_block"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:gravity="left|center_vertical"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_event"
        android:id="@+id/dialog_entry_button_create_event"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="left|center_vertical"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_notification"
        android:id="@+id/dialog_entry_button_create_notification"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="left|center_vertical"
        style="?android:attr/borderlessButtonStyle"
        />

</LinearLayout>